# AoC2022

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  aoc2022.opam  dune-project  flake.nix
.github/workflows/: build_nix.yml
01/: Cargo.toml  README.md
01/ocaml/: Lib01.ml  dune  main.ml
01/rust/src/: main.rs
01/src/: main.rs
02/: Cargo.toml
02/src/: main.rs
03/: Cargo.toml  README.md
03/src/: main.rs
04/: Cargo.toml  README.md
04/src/: main.rs
05/: Cargo.toml  README.md
05/src/: main.rs
06/: Cargo.toml  README.md
06/src/: main.rs
07/: Cargo.toml  README.md
07/src/: main.rs
08/: Cargo.toml  README.md
08/src/: main.rs
09/: Cargo.toml  README.md
09/src/: main.rs
10/: Cargo.toml  README.md
10/src/: main.rs
11/: Cargo.toml  README.md
11/src/: main.rs
12/: Cargo.toml  README.md
12/src/: main.rs
13/: Cargo.toml  README.md
13/src/: main.rs
14/: Cargo.toml  README.md
14/src/: main.rs
15/: Cargo.toml  README.md
15/src/: main.rs
libaoc/: Cargo.toml
libaoc/ocaml/: LibAoC.ml  dune
libaoc/src/: lib.rs
