[workspace.package]
edition = "2021"
authors = ["László Vaskó <1771332+vlaci@users.noreply.github.com>"]
license = "Unlicense"

[workspace]
resolver = "2"
members = [
    "libaoc",
    "01",
    "02",
    "03",
    "04",
]

[workspace.dependencies]
libaoc = { path = "./libaoc" }
color-eyre = { version = "0.6", default-features = false }
