[workspace.package]
edition = "2021"
authors = ["László Vaskó <1771332+vlaci@users.noreply.github.com>"]
license = "Unlicense"

[workspace]
resolver = "2"
members = [
    "libaoc/rust",
    "01/rust",
    "02",
    "03",
    "04",
    "05",
    "06",
    "07",
    "08",
    "09",
    "10",
    "11",
    "12",
    "13",
    "14",
]

[workspace.dependencies]
libaoc = { path = "./libaoc/rust" }
color-eyre = { version = "0.6", default-features = false }
