(lang dune 3.6)

(name aoc2022)

(generate_opam_files true)

(source
 (github vlaci/AoC2022))

(authors "László Vaskó")

(maintainers "László Vaskó")

(license UNLICENSE)

(documentation https://github.com/vlaci/AoC2022)

(package
 (name aoc2022)
 (synopsis "My Advent of Code Struggles")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
