[package]
name = "day04"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libaoc.workspace = true
color-eyre.workspace = true
regex = "1.7.0"
once_cell = "1.16.0"

[dev-dependencies]
indoc = "1.0.7"
pretty_assertions = "1.3.0"
rstest = "0.16.0"
