[package]
name = "day05"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libaoc.workspace = true
color-eyre.workspace = true
regex = "1.7.0"
once_cell = "1.16.0"
itertools = "0.10.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"
