[package]
name = "day14"
version = "0.14.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
libaoc.workspace = true
color-eyre.workspace = true
nom = "7.1.1"
itertools = "0.10.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"
indoc = "1.0.7"
